--- a/TP03MainProj/Views/Education/DiverseCultures.cshtml
+++ b/TP03MainProj/Views/Education/DiverseCultures.cshtml
@@ -161,7 +161,9 @@
     @Styles.Render("~/Content/edu")
 
     <style>
-
+        .fs-responsive {
+            font-size: calc(0.9rem + 0.5vw); /* Smaller base size with slight scaling based on viewport width */
+        }
         .chart-container {
             width: 100%;
             min-height: 500px;
