--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -11,7 +11,7 @@
 <section>
     <div class="container-fluid bg-white">
         <div class="row justify-content-center text-center section-row m-4">
-            <div class="col-12 col-md-8 col-lg-6">
+            <div class="col-12 col-md-8 col-lg-6 mt-3">
                 @{
                     var cultureColour = "";
                     switch (ViewBag.Culture as string)
@@ -40,11 +40,11 @@
                 <div id="culture" data-culture="@ViewBag.Culture" style="display: none;"></div>
             </div>
         </div>
-        <div class="row row-cols-3 justify-content-center m-auto section-row bg-grey border-2 p-2 mt-2 mb-3  border-bottom" id="button-section">
+        <div class="row row-cols-3 justify-content-center m-auto section-row shadow p-2 bg-body rounded mt-2 mb-3  border-bottom" id="button-section">
             <div class="col text-center">
                 <a class="btn culture-btn btn-primary text-nowrap w-25" href="#events-nav">Events</a>
                 <a class="btn culture-btn btn-primary fs-6 w-25" href="#quiz-section">Quiz</a>
-                <a class="btn culture-btn btn-primary fs-6 w-25" href="#attract-nav">Attraction</a>
+                <a class="btn culture-btn btn-primary fs-6 w-25" href="#attract-section">Attraction</a>
             </div>
 
         </div>
@@ -74,11 +74,12 @@
         <div class="row justify-content-center section-row bg-warning pt-5 mt-5" id="quiz-section">
             <div class="col-lg-8 col-md-10 text-center">
                 <div class="row mb-3">
-                    <h2 style="word-spacing: 8px;" class="fw-bold">Common Phrases and Cultural Etiquette Quiz</h2>
+                    <h2 style="word-spacing: 2px;" class="fw-bold display-3">Common Phrases and Cultural Etiquette Quiz</h2>
+                    <h4 id="startMessage">"Want to learn about this culture in depth? Try this quiz!"</h4>
+
                 </div>
 
                 <div class="row justify-content-center pb-5 pt-5 ">
-                    <h4 id="startMessage">"Want to learn about this culture in depth? Try this quiz!"</h4>
                     <button id="loadQuiz" class="btn btn-primary text-white culture-btn w-25">Learn About @ViewBag.Culture</button>
 
                     <!-- Score display area, initially hidden -->
@@ -112,37 +113,30 @@
                 </div>
 
                 <!-- Content Rows for Monuments and Restaurants -->
-                <div class="row g-4">
-                    <!-- Gutter for spacing between columns -->
-                    <!-- Famous Monument Section -->
-                    <div class="col-md-6">
-                        <div class="text-center mb-3">
-                            <h3 class="fs-3 fw-bold">Famous Monument</h3>
-                        </div>
-                        <div class="text-center">
-                            <img src="@Url.Content("~/Content/Images/Attractions/Chinese_Attraction.jpg")" class="img-fluid w-50" alt="Chinese Attraction">
-                        </div>
-                        <div class=" mt-3">
-                            <h4 class="fs-3 text-center">China Town</h4>
-                            <p>Melbourne's Chinatown has played an important role in establishing the culture of Chinese immigrants in Australia, and is still home to many Chinese restaurants, cultural venues, businesses and places of worship.</p>
-                        </div>
-                    </div>
+                @{
+                    switch (ViewBag.Culture as string)
+                    {
+                        case "Japanese":
+                            @Html.Partial("~/Views/Events/Attractions/Japanese.cshtml")
+                            break;
+                        case "Chinese":
+                            @Html.Partial("~/Views/Events/Attractions/Chinese.cshtml")
+                            break;
+                        case "Korean":
+                            @Html.Partial("~/Views/Events/Attractions/Korean.cshtml")
+                            break;
+                        case "Filipino":
+                            @Html.Partial("~/Views/Events/Attractions/Filipino.cshtml")
+                            break;
+                        case "Vietnamese":
+                            @Html.Partial("~/Views/Events/Attractions/Vietnamese.cshtml")
+                            break;
+                        default:
+                            cultureColour = "black"; // Default colour
+                            break;
+                    }
+                }
 
-                    <!-- Famous Restaurants Section -->
-                    <div class="col-md-6">
-                        <div class="mb-3">
-                            <h3 class="fs-3 fw-bold">Famous Restaurants</h3>
-                        </div>
-                        <div class="bg-light border rounded p-3 mb-5">
-                            <h4 class="fw-bold mb-3">Flower Drum</h4>
-                            <p>Gilbert Lau opened Flower Drum in 1975 in Chinatown. Its reputation for restrained opulence endures to this day. This fine-dining Cantonese restaurant has won multiple national and international awards. It's known for its delicate and finessed signature dishes, like baked crab and Peking duck. Service is almost psychic here – the waitstaff seem to anticipate your every need. Insiders ask for dishes from the unpublished chefs’ menu.</p>
-                        </div>
-                        <div class="d-flex justify-content-end">
-                            <button class="btn btn-primary">More</button>
-                        </div>
-                    </div>
-
-                </div>
             </div>
         </div>
 
@@ -177,6 +171,7 @@
     <!-- Add CSS for the quiz section -->
 
     <style>
+
         .form-check-label {
             margin-left: 5px;
         }
