--- a/TP03MainProj/Views/Shared/_Layout.cshtml
+++ b/TP03MainProj/Views/Shared/_Layout.cshtml
@@ -81,7 +81,7 @@
                 </div>
 
                 <div class="col-2">
-                    <h5 class="text-white">CultMelbourne</h5>
+                    <h5 class="text-white">Culture Melbourne</h5>
                     <ul class="nav flex-column">
                         <li class="nav-item text-white mb-2"><a href="@Url.Action("Index", "Home")" class="nav-link text-white p-0 ">Home</a></li>
                         <li class="nav-item text-white mb-2"><a href="@Url.Action("Index", "Education")" class="nav-link text-white p-0 ">Education</a></li>
