--- a/TP03MainProj/Views/Education/MigrationStories/ChinaStory.cshtml
+++ b/TP03MainProj/Views/Education/MigrationStories/ChinaStory.cshtml
@@ -27,6 +27,15 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-4 col-md-6 mb-3">
+                <div class="card bg-transparent border-0">
+                    <img class="card-img-top fixed-size-image" src="https://liveinmelbourne.vic.gov.au/__data/assets/image/0004/2194780/1.2.png" alt="LV Changyun and family">
+                    <div class="card-body">
+                        <div class="card-title"><a class="fs-5 no-underline fw-bold" href="https://liveinmelbourne.vic.gov.au/discover/migrant-stories/olive">Olive's Fulfilling Journey in Multicultural Melbourne</a></div>
+                        <p class="card-text">Meet Olive: A migrant math teacher in Melbourne, thriving in its inclusive culture and abundant opportunities. Discover her inspiring journey...</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
