--- a/TP03MainProj/Views/Education/MigrationStories/JapanStory.cshtml
+++ b/TP03MainProj/Views/Education/MigrationStories/JapanStory.cshtml
@@ -35,6 +35,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-6 mb-3">
+                    <div class="card bg-transparent border-0">
+                        <img class="card-img-top fixed-size-image" src="https://museumsvictoria.com.au/media/3502/masumi-jackson-sisters-000010516c-40.jpg" alt="LV Changyun and family">
+                        <div class="card-body">
+                            <div class="card-title"><a class="fs-5 no-underline fw-bold" href="https://museumsvictoria.com.au/immigrationmuseum/resources/immigrant-stories/masumi-hiraga-jackson/">Integration and Innovation: Mayu Kanamori’s Japanese Legacy in Melbourne</a></div>
+                            <p class="card-text">Meet Mayu: A Japanese immigrant whose art and community projects enrich Melbourne's cultural diversity.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
