--- a/TP03MainProj/Views/Education/MigrationStories/KoreaStory.cshtml
+++ b/TP03MainProj/Views/Education/MigrationStories/KoreaStory.cshtml
@@ -5,7 +5,7 @@
         <div class="display-3 fw-bold">Migration Stories</div>
     </div>
     <div class="container">
-        <div class="row g-4">
+        <div class="row justify-content-center g-4">
             <div class="col-lg-4 col-md-6 mb-3">
                 <div class="card bg-transparent border-0">
                     <img class="card-img-top fixed-size-image" src="https://www.studymelbourne.vic.gov.au/__data/assets/image/0023/60935/Millie-Lee_4_resized.jpg" alt="Millie Sinyoung Lee in the kitchen">
@@ -15,6 +15,15 @@
                         </div>
 
                         <p class="card-text">Millie Lee's transition from South Korea to Melbourne showcases her passion for cooking, leading to a successful career as a food stylist influenced by Melbourne's culinary diversity.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-3">
+                <div class="card bg-transparent border-0">
+                    <img class="card-img-top fixed-size-image" src="https://live-production.wcms.abc-cdn.net.au/ef135e65e77495699e53cdbf9183bfa6?impolicy=wcms_crop_resize&cropH=1080&cropW=1920&xPos=0&yPos=0&width=862&height=485" alt="LV Changyun and family">
+                    <div class="card-body">
+                        <div class="card-title"><a class="fs-5 no-underline fw-bold" href="https://www.abc.net.au/everyday/three-generations-of-korean-australian-women-on-community-belong/102123808">Across Generations: The Journey of Korean-Australian Women in Shaping Cultural Identity</a></div>
+                        <p class="card-text">Discover Naeun's journey: From learning Korean traditions in Sydney to her family's intergenerational strength in Australia.</p>
                     </div>
                 </div>
             </div>
