--- a/TP03MainProj/Views/Education/MigrationStories/PhilipinesStory.cshtml
+++ b/TP03MainProj/Views/Education/MigrationStories/PhilipinesStory.cshtml
@@ -10,10 +10,10 @@
         <div class="row g-4">
             <div class="col-lg-4 col-md-6 mb-3">
                 <div class="card bg-transparent border-0">
-                    <img class="card-img-top fixed-size-image"style=" object-position: center 30%; " src="https://liveinmelbourne.vic.gov.au/__data/assets/image/0003/1482681/Migrant-Jojo-Francisco-and-family-at-home.jpg" alt="Jojo Francisco and family in Melbourne">
+                    <img class="card-img-top fixed-size-image" style=" object-position: center 30%; " src="https://liveinmelbourne.vic.gov.au/__data/assets/image/0003/1482681/Migrant-Jojo-Francisco-and-family-at-home.jpg" alt="Jojo Francisco and family in Melbourne">
                     <div class="card-body">
                         <div class="card-title">
-                            <a class="fs-5 no-underline fw-bold"  href="https://liveinmelbourne.vic.gov.au/discover/migrant-stories/jojo-francisco">Jojo Francisco</a>
+                            <a class="fs-5 no-underline fw-bold" href="https://liveinmelbourne.vic.gov.au/discover/migrant-stories/jojo-francisco">Jojo Francisco</a>
                         </div>
                         <p class="card-text">Discover Francisco's inspiring journey to Melbourne, where multiculturalism, opportunity, and a balanced lifestyle weave the story of a family's pursuit of happiness and contribution to a vibrant community.</p>
                     </div>
@@ -27,6 +27,15 @@
                             <a class="fs-5 no-underline fw-bold" href="https://liveinmelbourne.vic.gov.au/discover/migrant-stories/jojo-francisco">How a Filipino Lime is Driving Inclusion in Australia</a>
                         </div>
                         <p class="card-text">Driven by their personal journey of cultural discovery, Fides Mae Santos and Grace Guinto transform challenges into a mission with The Entree.Pinays, celebrating Filipino heritage and promoting cultural unity in Australia through The Calamansi Story.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-3">
+                <div class="card bg-transparent border-0">
+                    <img class="card-img-top fixed-size-image" src="https://liveinmelbourne.vic.gov.au/__data/assets/image/0012/1993287/mark-wide.jpg" alt="LV Changyun and family">
+                    <div class="card-body">
+                        <div class="card-title"><a class="fs-5 no-underline fw-bold" href="https://liveinmelbourne.vic.gov.au/discover/migrant-stories/mark-landicho">Mark Landicho's Rewarding Journey in Melbourne's Biotech Industry</a></div>
+                        <p class="card-text">Meet Mark Landicho: From distributing COVID-19 treatments to manufacturing vaccines, he's proud to contribute to post-pandemic health at CSL. Discover his journey in Melbourne.</p>
                     </div>
                 </div>
             </div>
