--- a/TP03MainProj/Views/Education/MigrationStories/VietnamStory.cshtml
+++ b/TP03MainProj/Views/Education/MigrationStories/VietnamStory.cshtml
@@ -28,6 +28,15 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-4 col-md-6 mb-3">
+                <div class="card bg-transparent border-0">
+                    <img class="card-img-top fixed-size-image" src="https://www.refugeecouncil.org.au/wp-content/uploads/2011/04/Refugee-Tony-266x300.jpg" alt="LV Changyun and family">
+                    <div class="card-body">
+                        <div class="card-title"><a class="fs-5 no-underline fw-bold" href="https://www.refugeecouncil.org.au/tonys-story/">Melbourne's Beacon: Tony Le Nguyen's Immigrant Odyssey</a></div>
+                        <p class="card-text">Meet Tony Le Nguyen: From refugee to community leader, his journey reflects resilience and enriches Melbourne's cultural tapestry. Learn how he overcame challenges to thrive in the performing arts.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
